--- a/Thesis_Misc/d3_chloro.html
+++ b/Thesis_Misc/d3_chloro.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<head>
+    <link rel="stylesheet" type="text/css" href="css/mycss.css">
+</head>
 <style>
 
-.counties {
-  fill: black;
+.taz {
+  fill: gray;
   stroke: #000041;
   stroke-width: .5;
 }
 
-.states {
-  fill: black;
 
-}
 
 .q0-9 { fill:rgb(247,251,255); }
 .q1-9 { fill:rgb(222,235,247); }
@@ -25,21 +25,24 @@
 
 </style>
 <body>
+<p>
+<!--Slider has same class as when year is changed similar data actions occur as with continent checkboxes-->
+<span id = "min"></span><input class="CHBX_continent" type="range" min=0 max=6 step=1 value=0 oninput="showValue(this.value)"><span id="max"></span>
+
+    <span>Inundation Level :&nbsp;</span>
+    <span id="range">0ft</span>
+</p>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://d3js.org/queue.v1.min.js"></script>
 <script src="http://d3js.org/topojson.v1.min.js"></script>
 <script>
 
 var data;
-
+var access;
 var width = 960,
     height = 700;
-
+var columns = [];
 var rateByTAZ = d3.map();
-
-var quantize = d3.scale.quantize()
-    .domain([0.27, 0.92])
-    .range(d3.range(9).map(function(i) { return "q" + i + "-9"; }));
 
 var max = 0;
 
@@ -49,33 +52,59 @@ var projection = d3.geo.mercator()
         .scale(25000)
         .translate([width / 2, height / 2]);
 
-
 var path = d3.geo.path()
     .projection(projection);
 
 var svg = d3.select("body").append("svg")
-    .attr("width", width)
-    .attr("height", height);
+        .attr("width", width)
+        .attr("height", height);
 
 queue()
-    .defer(d3.json, "topotaz2.json")
-    .defer(d3.csv, "auto.tsv", function(d) { rateByTAZ.set(d.Z, + d.DtaMerge_base); })
+    .defer(d3.json, "data/topotaz2.json")
+    .defer(d3.tsv, "data/access_JOBS/autoJobs.tsv")
     .await(ready);
 
-function ready(error, us) {
-    data = us;
-    console.log("autoAccess", rateByTAZ);
-    console.log(data)
-  svg.append("g")
-      .attr("class", "counties")
-    .selectAll("path")
-      .data(topojson.feature(us, us.objects.taz).features)
-    .enter().append("path")
-      .attr("class", function(d) {
-              return quantize(rateByTAZ.get(d.properties.Z));})
-      .attr("d", path);
+function ready(error, theTaz, units) {
+
+    data = theTaz;
+    access = units;
+    columns = Object.keys(access[0]);
+    columns.splice(columns.indexOf("Z"),1);
+    wrangleData(columns[0]);
+    updateVis()
 
 
+}
+
+function showValue(val){
+
+    document.getElementById("range").innerHTML= val + "ft";
+    wrangleData(columns[val]);
+    updateVis()
+
+}
+
+function updateVis(){
+
+    var quantize = d3.scale.quantize()
+            .domain([0.0, max])
+            .range(d3.range(9).map(function(i) { return "q" + i + "-9"; }));
+
+
+    svg.append("g")
+            .attr("class", "taz")
+            .selectAll("path")
+            .data(topojson.feature(data, data.objects.taz).features)
+            .enter().append("path")
+            .attr("class", function(d) {
+                return quantize(rateByTAZ.get(d.properties.TAZ));})
+            .attr("d", path);
+}
+
+function wrangleData(level){
+    access.forEach(function(d) {
+        if (d[level] > max) max = +d[level];
+        rateByTAZ.set(d.Z, + d[level]); });
 }
 
 d3.select(self.frameElement).style("height", height + "px");
