--- a/Thesis_Misc/index.html
+++ b/Thesis_Misc/index.html
@@ -1,264 +1,177 @@
 <!DOCTYPE html>
-<html>
+<meta charset="utf-8">
 <head>
-    <title>Scenario Bus Routes</title>
-    <meta charset="utf-8" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-
-    <style>
-        #map {
-            width: 100%;
-            height: 800px;
-        }
-
-        .info {
-            padding: 6px 8px;
-            font: 14px/16px Arial, Helvetica, sans-serif;
-            background: white;
-            background: rgba(255,255,255,0.8);
-            box-shadow: 0 0 15px rgba(0,0,0,0.2);
-            border-radius: 5px;
-        }
-        .info h4 {
-            margin: 0 0 5px;
-            color: #777;
-        }
-
-        .legend {
-            text-align: left;
-            line-height: 18px;
-            color: #555;
-        }
-        .legend i {
-            width: 18px;
-            height: 18px;
-            float: left;
-            margin-right: 8px;
-            opacity: 0.7;
-        }
-        .but {
-            font: 12px/14px Arial, Helvetica, sans-serif;
-            color: #000;
-            border: 1px solid #000;
-        }
-        .but:hover {
-            color: #FFF;
-            background: #000;
-            cursor: pointer;
-        }
-        .mylabel{
-            text-align: right;
-            font: 14px/16px Arial, Helvetica, sans-serif;
-        }
-        .div2 {
-            padding: 6px 8px;
-            font: 14px/16px Arial, Helvetica, sans-serif;
-            background: white;
-            background: rgba(255,255,255,0.8);
-            box-shadow: 0 0 15px rgba(0,0,0,0.2);
-            border-radius: 5px;}
-        #outBus,
-        #inBus{
-            width: 30px;
-            height: 20px;
-            background: yellow;
-            opacity: .6;;
-            display: block;
-            float: left;
-            margin-right: 10px;
-        }
-
-        #outBus{
-            background: red;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="css/mycss.css">
 </head>
+<style>
+
+.taz {
+  fill: gray;
+  stroke: #000041;
+  stroke-width: .5;
+}
+
+
+
+.a0-9 { fill:rgb(247,251,255); }
+.a1-9 { fill:rgb(222,235,247); }
+.a2-9 { fill:rgb(198,219,239); }
+.a3-9 { fill:rgb(158,202,225); }
+.a4-9 { fill:rgb(107,174,214); }
+.a5-9 { fill:rgb(66,146,198); }
+.a6-9 { fill:rgb(33,113,181); }
+.a7-9 { fill:rgb(8,81,156); }
+.a8-9 { fill:rgb(8,48,107); }
+
+.t0-9 { fill:#EFE2E2;}
+.t1-9 { fill:#E0C6C6;}
+.t2-9 { fill:#D1AAAA;}
+.t3-9 { fill:#C18D8D;}
+.t4-9 { fill:#B27171;}
+.t5-9 { fill:#A35555;}
+.t6-9 { fill:#933838;}
+.t7-9 { fill:#841C1C;}
+.t8-9 { fill:#750000;}
+
+
+.w0-9 { fill:#FFFFFF}
+.w1-9 { fill:#C6C6C6; }
+.w2-9 { fill:#AAAAAA; }
+.w3-9 { fill:#8D8D8D; }
+.w4-9 { fill:#717171; }
+.w5-9 { fill:#555555 }
+.w6-9 { fill:#383838;}
+.w7-9 { fill:#1C1C1C; }
+.w8-9 { fill:#000000; }
+
+</style>
 <body>
-<div id="map"></div>
-<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 
-<script type="text/javascript" src="RawData/Lines.js"></script>
-<script type="text/javascript" src="RawData/stops.js"></script>
-<script type="text/javascript" src="RawData/ind4ft.js"></script>
-<script type="text/javascript">
+<!--Slider has same class as when year is changed similar data actions occur as with continent checkboxes-->
+<div>
 
+    <div class="Atype" id = "slider">
+        <span id = "min"></span><input id="theSlider" type="range" min=0 max=6 step=1 value=0 oninput="showValue(value)"><span id="max"></span>
+        <span>Inundation Level :&nbsp;</span>
+        <span id="range">0ft</span>
+    </div>
+    <div class="Atype" id = "auto" >Auto</div>
+    <div class="Atype" id = "transit" >Transit</div>
+    <div class ="Atype" id = "walk">Walk</div>
 
-//Testingout the Githubs
+    <div id = "map"></div>
+</div>
+<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="http://d3js.org/queue.v1.min.js"></script>
+<script src="http://d3js.org/topojson.v1.min.js"></script>
+<script>
 
-    var map = L.map('map').setView([42.3596, -71.0561], 12);
-        var buses = new L.FeatureGroup();
-        var stops = new L.FeatureGroup();
-        var water = new L.FeatureGroup();
+var data;
+var access;
+var auto, transit, walk;
+var width = 1100,
+    height = 1000;
+var columns = [];
+var rateByTAZ = d3.map();
+var current;
+var max = 0;
 
+var projection = d3.geo.mercator()
+        .center([-71.1603, 42.305])
+        .scale(25000)
+        .translate([width / 2, height / 2]);
 
-        // control that shows state info on hover
-        var info = L.control(); //? What Does .control() do?
-        var markers = new L.FeatureGroup();
+// find the top left and bottom right of current projection
+var path = d3.geo.path()
+    .projection(projection);
 
+var zoom = d3.behavior.zoom()
+        .translate(projection.translate())
+        .scale(projection.scale())
+        .scaleExtent([height*25, 500 * height])
+        .on("zoom", zoomed);
 
-        var stopStyle = {
-            radius: 5,
-            fillColor: "gray",
-            color: "#000",
-            weight: 1,
-            opacity: 1,
-            fillOpacity: 0.8
-        };
+var svg = d3.select("#map").append("svg")
+        .attr("width", width)
+        .attr("height", height);
 
-        var busStops = L.geoJson(theStops, {
-            pointToLayer: function (feature, latlng) {
-                return L.circleMarker(latlng, stopStyle);
-            }
-        });
+var g = svg.append("g")
+        .call(zoom);
 
+queue()
+    .defer(d3.json, "data/topotaz2.json")
+    .defer(d3.tsv, "data/access_JOBS/autoJobs.tsv")
+    .defer(d3.tsv, "data/access_Jobs/transitJobs.tsv")
+    .defer(d3.tsv, "data/access_JOBS/walkJobs.tsv")
+    .await(ready);
 
-        info.onAdd = function (map) {
-            this._div = L.DomUtil.create('div', 'info');
-            this.update();
-            return this._div;
-        };
+function ready(error, theTaz, Qauto, Qtransit, Qwalk) {
+    data = theTaz;
+    auto = Qauto;
+    transit = Qtransit;
+    walk = Qwalk;
+    access = auto;
+    current = auto;
 
-        info.update = function (props) {
-            this._div.innerHTML = '<h4>' + 'Scenario Bus Routes' + '</h4>' + '<p>' + '<span id=inBus> </span>' + "Urban Ring " +'</p>' + '<p>' +
-            '<span id=outBus> </span>' + "IND. Urban Ring " + '</p>'
-        };
+    wrangleData(access, 0);
+    updateVis()
 
-        info.addTo(map);
+}
 
-
-
-        // get color depending on population density value
-        function getColor(d) {
-            return (d === "UR_Inner_SN" || d === "UR_Inner_NS") ? 'yellow' :
-                    (d === "Outer_IND_SN" || d === "Outer_IND_NS") ? "red" :
-                    '#001a61'}
-
-        function setOpacity(d) {
-            return (d === "UR_Inner_SN" || d === "UR_Inner_NS") ?  0.5 :
-                    (d === "Outer_IND_SN" || d === "Outer_IND_NS") ? 0.5 :
-                            0.4
-        }
-
-
-        function style(feature) {
-            return {
-                weight: 5,
-                opacity: setOpacity(feature.properties["NAME"]),
-                color: getColor(feature.properties["NAME"])
-            };
-        }
-
-
-
-        function highlightFeature(e) {
-            var layer = e.target;
-
-            layer.setStyle({
-                weight: 6,
-                color: '#050F1A',
-                dashArray: '',
-                fillOpacity: 0.1
-            });
+function showValue(val){
+    document.getElementById("range").innerHTML= val + "ft";
+    wrangleData(access, val);
+}
 
 
+function updateVis(){
+    console.log(max)
+
+    var check = Object.keys(access[0])[1]
+    var q =  check.indexOf("Dta") >= 0 ? "a" : check.indexOf("transit") >= 0 ? "t" : "w";
+    var quantize = d3.scale.quantize()
+            .domain([-.05, max])
+            .range(d3.range(9).map(function(i) { return q + i + "-9"; }));
+
+    svg.select("g")
+            .attr("class", "taz")
+            .selectAll("path")
+            .data(topojson.feature(data, data.objects.taz).features)
+            .enter().append("path")
+            .attr("class", function(d) {
+                return quantize(rateByTAZ.get(d.properties.TAZ));})
+            .attr("d", path);
+}
+
+function wrangleData(access, level){
+    if (Object.keys(current[0])[1] !== Object.keys(access[0])[1]){
+        max = 0;
+        current = access
+    }
+    columns = Object.keys(access[0]);
+    console.log(columns)
+    columns.splice(columns.indexOf("Z"),1);
+
+    level = columns[level]
+    access.forEach(function(d) {
+        if (d[level] > max) max = +d[level];
+        rateByTAZ.set(d.Z, + d[level]); });
+
+    updateVis()
+}
 
 
-            var mytest = layer.feature.geometry;
-
-//            info.update(layer.feature.properties);
-//            marker = createMarker(mytest);
-//            marker.addTo(map);
-//            marker.bindPopup(layer.feature.properties.NAME).openPopup();
-        }
-
-
-        var busLines;
-
-        function resetHighlight(e) {
-            busLines.resetStyle(e.target);
-            water.resetStyle();
-        }
+d3.select("body").selectAll(".Atype").on("click", function(d){
+    if (this.id === "walk") access = walk;
+    if (this.id === "auto") access = auto;
+    if (this.id === "transit") access = transit;
+    wrangleData(access,+d3.select("#theSlider").property("value") )
+});
+d3.select(self.frameElement).style("height", height + "px");
 
 
-        function onEachFeature(feature, layer) {
-            layer.on({
-                mouseover: highlightFeature,
-                mouseout: resetHighlight,
-            });
-        }
-
-        busLines = L.geoJson(lines, {
-            style: style,
-            onEachFeature: onEachFeature
-        }).addTo(buses);
-
-        var water4ft;
-
-    water4ft= L.geoJson(fourFeet, {
-        style: style,
-        onEachFeature: null
-        }).addTo(water);
-
-
-//
-//        function reload() {
-//            buses.clearLayers();
-//            water.clearLayers();
-//            L.geoJson(lines, {
-//                style: style,
-//                onEachFeature: onEachFeature
-//            }).addTo(buses);
-//
-//         L.geoJson(fourFeet, {
-//                style: style,
-//                onEachFeature: null
-//            }).addTo(water);
-//        }
-
-        map.attributionControl.addAttribution('Dowd Model Output');
-
-
-
-
-            L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png', {
-                    maxZoom: 18,
-                    minZoom: 10,
-                    id: 'examples.map-20v6611k'
-                }).addTo(map);
-
-
-    var legend = L.control({position: 'bottomright'});
-        legend.onAdd = function (map) {
-
-            var div = L.DomUtil.create('div', 'info legend'),
-                    grades = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10],
-                    labels = [],
-                    from, to;
-
-            for (var i = 0; i < grades.length; i++) {
-                from = grades[i];
-
-//                labels.push(
-//                        '<i style="background:' + getColor(from + 1) + '"></i> ' +
-//                        from);//+ (to ? '&ndash;' + to : '+'));
-//
-//            }
-
-                div.innerHTML = labels.join('<br>');
-                return div;
-            }
-
-        };
-
-        buses.addTo(map);
-        busStops.addTo(map);
-        water4ft.addTo(map);
-        legend.addTo(map);
-
-
+function zoomed() {
+    projection.translate(d3.event.translate).scale(d3.event.scale);
+    g.selectAll("path").attr("d", path);
+}
 </script>
-</body>
-</html>
