--- a/Thesis_Misc/d3_chloro.html
+++ b/Thesis_Misc/d3_chloro.html
@@ -1,62 +1,143 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <head>
-    <link rel="stylesheet" type="text/css" href="css/mycss.css">
 
     <!-- Add Libraries -->
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="libs/d3/d3.min.js" charset="utf-8"></script>
+    <script src="libs/jquery/jquery-2.1.1.min.js" charset="utf-8"></script>
+    <script src="libs/bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
     <script src="http://d3js.org/queue.v1.min.js"></script>
     <script src="http://d3js.org/topojson.v1.min.js"></script>
-
-    <!-- Local Libs & Tools -->
+    <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <script src="packages/simple_statistics.js"></script>
+
+    <!-- My Tools -->
     <script src="js/chloroClass.js"></script>
 
+    <!-- LEAFLET DATA -->
+    <script src="data/transitLines.js"></script>
+    <script src="data/dta100V.js"></script>
     <!-- Viz Elements -->
     <script src="js/accessibility.js"></script>
+    <!--<script src="js/streetMap.js"></script>-->
+    <script src="js/topoMap.js"></script>
+    <script src="js/chart.js"></script>
+    <script src="js/topoNet.js"></script>
+
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+    <link rel="stylesheet" type="text/css" href="libs/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+    <link rel="stylesheet" type="text/css" href="css/mycss.css">
+
+
 </head>
 
 <body>
 
-<!--Slider has same class as when year is changed similar data actions occur as with continent checkboxes-->
-<div>
+<div class="container">
+    <div class="row clearfix">
+        <div class="col-md-12 column">
+            <div>
 
-    <div class="Atype" id = "slider">
-        <span id = "min"></span><input id="theSlider" type="range" min=0 max=6 step=1 value=0 oninput="showValue(value)"><span id="max"></span>
-        <span>Inundation Level :&nbsp;</span>
-        <span id="range">0ft</span>
+                <div class="Btype" id = "slider">
+                    <span id = "min"></span><input id="theSlider" type="range" min=0 max=6 step=1 value=0 oninput="showValue(value)"><span id="max"></span>
+                    <span>Inundation Level :&nbsp;</span>
+                    <span id="range">0ft</span>
+                </div>
+                <div class="Atype" id = "auto" >Auto</div>
+                <div class="Atype" id = "transit" >Transit</div>
+                <div class="Atype" id = "walk">Walk</div>
+
+            </div>
+        </div>
     </div>
-    <div class="Atype" id = "auto" >Auto</div>
-    <div class="Atype" id = "transit" >Transit</div>
-    <div class ="Atype" id = "walk">Walk</div>
+    <div class="row clearfix">
+        <div class="col-md-6 column">
+            <div id="map"></div>
+        </div>
+        <div class="col-md-6 column">
+            <!--Top-->
+            <div id="DataSelection">
+                <div class="btn-group-horizontal">
+                <button type="button" class="btn btn-primary">Demographics</button>
+                <button type="button" class="btn btn-primary">Highway</button>
+                <button type="button" class="btn btn-primary">Transit</button>
+                <button type="button" class="btn btn-primary">Misc.</button>
+               </div>
+            </div>
 
-    <div id="map"></div>
+            <div>
+                <div class="col-md-6 column">
+                    <div class = "charts" id = "chart"></div>
+                </div>
+                <div class="col-md-6 column">
+                    <div class = "charts" id = "chart1"></div>
+                </div>
+            </div>
+            <div>
+                <div class="col-md-6 column">
+                    <div class = "charts" id = "chart2"></div>
+                </div>
+                <div class="col-md-6 column">
+                    <div class = "charts" id = "chart3"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
+<!--Slider has same class as when year is changed similar data actions occur as with continent checkboxes-->
+
+
+</body>
+
+
 <script>
+    var jobs;
     var data;
     var access;
-    var auto, transit, walk;
-    var access_viz;
+    var current = null;
+    var auto, transit, walk, dta;
+
     queue()
             .defer(d3.json, "data/topotaz2.json")
+            .defer(d3.json, "data/jobs.json")
             .defer(d3.tsv, "data/access_JOBS/autoJobs.tsv")
             .defer(d3.tsv, "data/access_Jobs/transitJobs.tsv")
             .defer(d3.tsv, "data/access_JOBS/walkJobs.tsv")
+            .defer(d3.json, "data/DTA_g100V.json")
             .await(ready);
 
-    function ready(error, theTaz, Qauto, Qtransit, Qwalk) {
+    function ready(error, theTaz, Qjobs, Qauto, Qtransit, Qwalk, Qdta) {
         data = theTaz;
         auto = Qauto;
         transit = Qtransit;
         walk = Qwalk;
         access = auto;
-        current = auto;
-        access_viz = new AccessVis(d3.select("#map"))
-        access_viz.wrangleData(access, 0);
-        access_viz.updateVis()
+        jobs = Qjobs;
+        dta = Qdta;
+
+
+//        access_viz = new AccessVis(d3.select("#map"));
+       // net_viz = new NetVis(d3.select("#map"));
+//        access_viz.wrangleData(access, 0);
+//        access_viz.updateVis();
+
+        street_viz = new StreetMapVis("map");
+        asset_viz = new AssetVis(d3.select("#chart"), jobs);
+        asset_viz2 = new AssetVis(d3.select("#chart1"), jobs);
+        asset_viz3 = new AssetVis(d3.select("#chart2"), jobs);
+        asset_viz4 = new AssetVis(d3.select("#chart3"), jobs);
+
 
     }
+
+
+    $(document).ready(function() {
+        $(".btn-primary").click(function(){
+            console.log(this)
+        });
+    });
 
     function showValue(value){
         access_viz.showValue(value)
@@ -68,9 +149,9 @@
         if (this.id === "walk") access = walk;
         if (this.id === "auto") access = auto;
         if (this.id === "transit") access = transit;
+        document.getElementById("theSlider").value = "0";
+        document.getElementById("range").innerHTML=  "0ft";
         that.wrangleData(access,+d3.select("#theSlider").property("value") )
     });
-
-    d3.select(self.frameElement).style("height", access_viz.height + "px");
 
 </script>
