--- a/Thesis_Misc/scratch/pointmap.html
+++ b/Thesis_Misc/scratch/pointmap.html
@@ -1,69 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>d3.js with leaflet.js</title>
-
-    <link
-            rel="stylesheet"
-            href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css"
-            />
-    <script src="http://d3js.org/d3.v3.min.js"></script>
-
-    <script
-            src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js">
-    </script>
+    <script src = "../libs/d3/d3.min.js"></script>
 
 </head>
 <body>
+<script>
 
-<div id="map" style="width: 600px; height: 400px"></div>
+    var color = d3.scale.category10();
 
-<script type="text/javascript">
+    var canvas = d3.select("body").append("svg")
+            .attr("width", 500)
+            .attr("height", 500);
 
-    var map = L.map('map').setView([-41.2858, 174.7868], 13);
-    mapLink =
-            '<a href="http://openstreetmap.org">OpenStreetMap</a>';
-    L.tileLayer(
-            'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-                attribution: '&copy; ' + mapLink + ' Contributors',
-                maxZoom: 18,
-            }).addTo(map);
+    d3.json("Test_TreeMap.json", function(data){
+       // console.log(data)
+        var treemap = d3.layout.treemap()
+                .size([500,500])
+                .nodes(data);
 
-    /* Initialize the SVG layer */
-    map._initPathRoot()
 
-    /* We simply pick up the SVG from the map object */
-    var svg = d3.select("#map").select("svg"),
-            g = svg.append("g");
+        console.log(data)
+        var cells = canvas.selectAll(".cell")
+                .data(treemap)
+                .enter()
+                .append("g")
+                .attr("class", "cell");
 
-    d3.json("circles.json", function(collection) {
-        /* Add a LatLng object to each item in the dataset */
-        collection.objects.forEach(function(d) {
-            d.LatLng = new L.LatLng(d.circle.coordinates[0],
-                    d.circle.coordinates[1])
-        })
+        cells.append("rect")
+                .attr("x",function (d) { return d.x })
+                .attr("y", function (d) { return d.y })
+                .attr("width", function (d) { return d.dx })
+                .attr("height", function (d) { return d.dy })
+                .attr("fill", function (d) { return d.children ? null :  color(d.parent.name) })
+                .style("stroke", "white")
 
-        var feature = g.selectAll("circle")
-                .data(collection.objects)
-                .enter().append("circle")
-                .style("stroke", "black")
-                .style("opacity", .6)
-                .style("fill", "red")
-                .attr("r", 20);
+        cells.append("text")
+                .attr("x", function (d) { return d.x + d.dx / 2})
+                .attr("y", function (d) { return d.y + d.dy / 2})
+                .text(function (d) {return d.name})
 
-        map.on("viewreset", update);
-        update();
-
-        function update() {
-            feature.attr("transform",
-                    function(d) {
-                        return "translate("+
-                                map.latLngToLayerPoint(d.LatLng).x +","+
-                                map.latLngToLayerPoint(d.LatLng).y +")";
-                    }
-            )
-        }
     })
 </script>
+
 </body>
 </html>
