--- a/Thesis_Misc/index.html
+++ b/Thesis_Misc/index.html
@@ -322,9 +322,9 @@
                         <span>Inundation Level :&nbsp;</span>
                         <span id="Lostrange">1ft</span>
                     </div>
-                    <button type="button" class="btn btn-default  Stype" id = "SpiderA">Auto</button>
-                    <button type="button" class="btn btn-default  Stype" id = "SpiderT">Transit</button>
-                    <button type="button" class="btn btn-default Stype" id  = "SpiderTot">Total</button>
+                    <button type="button" class="btn btn-default  Stype" id = "spAuto">Auto</button>
+                    <button type="button" class="btn btn-default  Stype" id = "spTransit">Transit</button>
+                    <button type="button" class="btn btn-default Stype" id  = "spTotal">Total</button>
                     <button type="button" class="btn btn-default fillerButton"></button>
                     <button type="button" class="btn btn-default " data-toggle="modal" data-target="#lostTripsModal">?</button>
 
